--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Website for portfolio",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,5 @@
   "bugs": {
     "url": "https://github.com/derek-hon/Website/issues"
   },
-  "homepage": "https://github.com/derek-hon/Website"
+  "homepage": "https://derek-hon.github.io/Website/"
 }
