Rolled back package and changed html title

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Derek's Website",
+  "name": "PortfolioWebsite",
   "version": "1.0.0",
   "description": "Website for portfolio",
   "main": "index.js",
